GROOVY-10229 (pt.2), GROOVY-10339 (pt.2), GROOVY-10347 (pt.2)